--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -3,12 +3,6 @@
 *
   box-sizing: border-box
 
-html.standalone-page
-  height: 100%
-  min-height: 100%
-  position: relative
-  width: 100%
-
 body
   +flexbox
   +flex-direction(column)
@@ -128,6 +122,10 @@ h1
   max-width: 1240px
   padding: 0 20px
   width: 100%
+
+#main
+  flex: 1
+  padding-bottom: 40px
 
 #home .content .wrapper
   padding: 0
@@ -287,21 +285,50 @@ a.store-link
 header, footer
   +flexbox
   +flex-direction(column)
+  flex-shrink: 0
   text-align: center
 
 footer
-  padding: 100px 0
+  padding: 80px 0
 
   @media screen and (max-width: $break-small)
-    padding: 75px 0
+    padding: 72px 0
+
+  .wrapper
+    display: flex
+    flex-direction: column
+    gap: 40px
 
 .footer-store-name
-  font-size: 20px
-  line-height: 30px
-  margin-bottom: 5px
+  font-size: 1.5em
 
-.footer-store-credit
-  font-size: 14px
+.social-icons
+  display: flex
+  gap: 20px
+  list-style: none
+  margin: 0
+  padding: 0
+  flex-wrap: wrap
+  justify-content: center
+
+  @media screen and (max-width: $break-small)
+    gap: 16px
+
+  a
+    display: flex
+    align-items: center
+    justify-content: center
+    flex-shrink: 0
+    width: 36px
+    height: 36px
+
+    svg
+      fill: currentColor
+      height: 22px
+      width: 22px
+
+      &.tumblr-icon
+        width: 14px
 
 .bigcartel-credit
   line-height: 1em
@@ -312,7 +339,6 @@ footer
   outline-offset: 4px
   padding: 2px 0
   text-decoration: none
-  margin-top: 30px
 
   &:hover
     text-decoration: none
